# Trabalho-3-Mayara-Raquel

./: .gitignore  README.md  mkdocs.yml  requirements.txt
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/02-produto/: componentes.md  funcoes.md
docs/03-analise-tecnica/: arquitetura.md
docs/stylesheets/: extra.css
incubadora/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults
incubadora/components/bme280/: CMakeLists.txt  bme280.c
incubadora/components/bme280/include/: bme280.h
incubadora/components/buzzer/: CMakeLists.txt  buzzer.c
incubadora/components/buzzer/include/: buzzer.h
incubadora/components/dht11/: CMakeLists.txt  dht11.c
incubadora/components/dht11/include/: dht11.h
incubadora/components/rele/: CMakeLists.txt  rele.c
incubadora/components/rele/include/: rele.h
incubadora/components/rgb_led/: CMakeLists.txt  rgb_led.c
incubadora/components/rgb_led/include/: rgb_led.h
incubadora/components/ssd1306_display/: CMakeLists.txt  ssd1306.c
incubadora/components/ssd1306_display/include/: ssd1306.h
incubadora/docs/: FUNCIONAMENTO.md  REQUISITOS.md  SETUP.md
incubadora/main/: CMakeLists.txt  app_config.h  main.c  shared_state.c  shared_state.h  task_buzzer.c  task_control.c  task_dht11.c  task_display.c  task_http_server.c  task_led_status.c  task_sensor.c  task_wifi_ap.c  tasks.h
